# seo-studio-research

./: .dockerignore  .env.example  .gitignore  CONTRIBUTORS.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml
evaluation/: README.md  pyproject.toml
evaluation/configs/: candidate-amendment-20260717.json  compatibility-criteria.toml  compatibility-isolated-gemma4-criteria.toml  contract.toml  full-study-approval-20260719.json  full-study-discovery-queries.json  full-study-execution-plan-v1.jsonl  full-study-human-check-provenance-20260722.json  full-study-human-check-reconciliation-20260722.json  full-study-infrastructure-update-20260723.json  full-study-listener-reverification-20260723.json  full-study-operational-readiness-v1.json  full-study-protocol-v1.draft.json  full-study-protocol-v1.json  full-study-replacement-reconciliation-20260723.json  full-study-runtime-reverification-20260719.json  full-study-sample-size-decision-20260719.json  full-study-selection-20260719.json  full-study.toml  gemma4-candidate-amendment-20260717.json  isolated-runtime-evidence-20260717.json  model-candidate-evidence.json  models-amendment.toml  models-full.toml  models-isolated-gemma4-repair.toml  models-isolated-gemma4.toml  models-truncation-repair.toml  models.toml  pilot-amendment.toml  pilot-isolated-gemma4-repair.toml  pilot-isolated-gemma4.toml  pilot-truncation-repair.toml  pilot.toml  supervisor-acknowledgement-20260718.json  truncation-repair-criteria.toml  truncation-repair-isolated-gemma4-criteria.toml  writer-compatibility-criteria.toml  writer-matrix-criteria.toml
(+550 files in other folders)
